--- a/settings/index.html
+++ b/settings/index.html
@@ -13,13 +13,15 @@
     <h1 data-i18n="settings.title"></h1>
     <p data-i18n="settings.description"></p>
 
-    <ul>
-        <li><input type="text" class="city" value="Helsingborg"></li>
-        <li><input type="text" class="city" value="Helsingborg"></li>
-        <li><input type="text" class="city" value="Helsingborg"></li>
-    </ul>
+    <div class="padding">
+        <ul id="citiesList">
+        </ul>
+    </div>
 
-    <button id="addCityBtn" class="right">Add city</button>
-    <button id="saveBtn" class="right">Save changes</button>
+    <div class="padding">
+        <button id="addCityBtn">Add city</button>
+        <button id="saveBtn">Save changes</button>
+    </div>
+    
 </body>
 </html>
